# dy_title

./: .gitignore  CLAUDE.md  README.md  README.txt  build_exe.py  config.py  douyin_crawler.py  launcher.py  locators.py  main.py  pyproject.toml  requirements.txt  test_adb.py  test_detail.py  test_ocr.py  test_paddle.py  test_scan.py
web/: __init__.py  server.py
web/static/: index.html
