[project]
name = "douyin-crawler"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "appium-python-client>=2.11.0",
    "fastapi>=0.138.0",
    "openpyxl>=3.1.5",
    "python-multipart>=0.0.32",
    "rapidocr-onnxruntime>=1.4.4",
    "requests>=2.34.2",
    "selenium>=4.15.0,<5.0.0",
    "uvicorn[standard]>=0.49.0",
]
